force-app/main/default/objects/QA_Question_Info__c/QA_Question_Info__c.object-meta.xml
<CustomObject>
    <label>QA Question Info</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>QA Question Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Question Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>