force-app/main/default/objects/QA_Question_Info__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>The question&apos;s help text, when rendered within a component.</description>
    <inlineHelpText>Help text displayed next to the question</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>