force-app/main/default/objects/QA_Question_Info__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Controls the order that the questions will appear on the dynamic form</description>
    <inlineHelpText>Controls order of questions on QA form.  Start at &quot;1&quot;, then &quot;2&quot;, &quot;3&quot;. . .</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>