force-app/main/default/objects/QA_Question_Info__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Score value should be 0.  Questions generated using this will have their score set to -100 to fail the form.</description>
    <inlineHelpText>Modifier for checkbox questions.  Question won&apos;t grant any points.  Instead, it will set the form&apos;s score to 0 if checked.</inlineHelpText>
    <label>Pass/Fail</label>
    <type>Checkbox</type>
</CustomField>