force-app/main/default/objects/QA_Question_Info__c/fields/Question_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Question_Prompt__c</fullName>
    <description>The label of the question &quot;field&quot; as displayed in a component</description>
    <label>Question Prompt</label>
    <length>80</length>
    <type>Text</type>
</CustomField>