force-app/main/default/objects/QA_Question_Info__c/fields/Require_Comment__c.field-meta.xml
<CustomField>
    <fullName>Require_Comment__c</fullName>
    <description>Questions generated using this info will require data in the &quot;Comments&quot; field if they use the selected response.</description>
    <inlineHelpText>If the reviewer selects this answer on a QA form, a comment is required.</inlineHelpText>
    <label>Require Comment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Response 1</fullName>
            </value>
            <value>
                <fullName>Response 2</fullName>
            </value>
            <value>
                <fullName>Response 3</fullName>
            </value>
            <value>
                <fullName>Response 4</fullName>
            </value>
            <value>
                <fullName>Checked</fullName>
            </value>
            <value>
                <fullName>Unchecked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>