force-app/main/default/objects/QA_Question_Info__c/fields/Response_1__c.field-meta.xml
<CustomField>
    <fullName>Response_1__c</fullName>
    <label>Response 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>