force-app/main/default/objects/QA_Question_Info__c/fields/Response_2__c.field-meta.xml
<CustomField>
    <fullName>Response_2__c</fullName>
    <label>Response 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>