force-app/main/default/objects/QA_Question_Info__c/fields/Response_2_Score__c.field-meta.xml
<CustomField>
    <fullName>Response_2_Score__c</fullName>
    <label>Response 2 Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>