force-app/main/default/objects/QA_Question_Info__c/fields/Response_3__c.field-meta.xml
<CustomField>
    <fullName>Response_3__c</fullName>
    <label>Response 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>