force-app/main/default/objects/QA_Question_Info__c/fields/Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Score_Value__c</fullName>
    <description>The value of this question as a part of the form.  Value of individual questions cannot exceed 100 on a design</description>
    <label>Score Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>