force-app/main/default/objects/QA_Question_Info__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Controls appearance and behavior of questions</description>
    <inlineHelpText>&quot;Standard&quot; questions display as a picklist and require at least one response.  &quot;Checkbox&quot; questions do not need responses.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>