force-app/main/default/objects/QA_Question_Info__c/validationRules/Lock_Activated_Design.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Activated_Design</fullName>
    <active>true</active>
    <description>Prevent any and all edits of question info for designs that have been activated</description>
    <errorConditionFormula>NOT(ISBLANK(QA_Design__r.Activation_Date__c))</errorConditionFormula>
    <errorMessage>Design has activation date!  Question info locked for edits</errorMessage>
</ValidationRule>