force-app/main/default/objects/QA_Question_Info__c/validationRules/Requiring_Comment_Needs_Response.validationRule-meta.xml
<ValidationRule>
    <fullName>Requiring_Comment_Needs_Response</fullName>
    <active>true</active>
    <description>If requiring notes for a response, that response cannot be null</description>
    <errorConditionFormula>(ISPICKVAL( Require_Comment__c , &quot;Response 1&quot; ) &amp;&amp; ISBLANK(Response_1__c)) ||
(ISPICKVAL( Require_Comment__c , &quot;Response 2&quot; ) &amp;&amp; ISBLANK(Response_2__c)) ||
(ISPICKVAL( Require_Comment__c , &quot;Response 3&quot; ) &amp;&amp; ISBLANK(Response_3__c)) ||
(ISPICKVAL( Require_Comment__c , &quot;Response 4&quot; ) &amp;&amp; ISBLANK(Response_4__c))</errorConditionFormula>
    <errorDisplayField>Require_Comment__c</errorDisplayField>
    <errorMessage>Cannot require comment for an empty response</errorMessage>
</ValidationRule>