force-app/main/default/objects/QA_Question_Info__c/validationRules/Response_1_Response_Score_Pair.validationRule-meta.xml
<ValidationRule>
    <fullName>Response_1_Response_Score_Pair</fullName>
    <active>true</active>
    <description>If response 1 exists, it needs a score value</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Standard&quot;) &amp;&amp;

((ISBLANK(Response_1__c) &amp;&amp; NOT(ISBLANK(Response_1_Score__c))) ||
(NOT(ISBLANK(Response_1__c)) &amp;&amp; ISBLANK(Response_1_Score__c)))</errorConditionFormula>
    <errorDisplayField>Response_1__c</errorDisplayField>
    <errorMessage>Response 1 is missing a value!  Delete response 1 entirely or complete the response/score pair</errorMessage>
</ValidationRule>