force-app/main/default/objects/QA_Question_Info__c/validationRules/Response_4_Response_Score_Pair.validationRule-meta.xml
<ValidationRule>
    <fullName>Response_4_Response_Score_Pair</fullName>
    <active>true</active>
    <description>If response 4 exists, it needs a score value</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Standard&quot;) &amp;&amp;

((ISBLANK(Response_4__c) &amp;&amp; NOT(ISBLANK(Response_4_Score__c))) ||
(NOT(ISBLANK(Response_4__c)) &amp;&amp; ISBLANK(Response_4_Score__c)))</errorConditionFormula>
    <errorDisplayField>Response_4__c</errorDisplayField>
    <errorMessage>Response 4 is missing a value!  Delete response 4 entirely or complete the response/score pair</errorMessage>
</ValidationRule>